# erdos-pyanomaly

./: .~lock.mapping.xlsx#  pyproject.toml  requirements.txt
erdos_pyanomaly.egg-info/: PKG-INFO  SOURCES.txt
examples/: example2.py
pyanomaly/: characteristics.py  config.py  wrdsdata.py
pyanomaly/__pycache__/: characteristics.CRSPD._adjust_bidaskhl-3288.py312.1.nbc  characteristics.CRSPD._adjust_bidaskhl-3288.py312.nbi  characteristics.CRSPD._apply_to_ids.locals.inner-3099.py312.1.nbc  characteristics.CRSPD._apply_to_ids.locals.inner-3099.py312.2.nbc  characteristics.CRSPD._apply_to_ids.locals.inner-3099.py312.3.nbc  characteristics.CRSPD._apply_to_ids.locals.inner-3099.py312.nbi  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.1.nbc  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.2.nbc  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.3.nbc  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.4.nbc  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.5.nbc  characteristics.CRSPD._apply_to_idyms.locals.inner-3135.py312.nbi  characteristics.CRSPM._residual_momentum-2368.py312.1.nbc  characteristics.CRSPM._residual_momentum-2368.py312.nbi  characteristics.Merge._zrank-3857.py312.1.nbc  characteristics.Merge._zrank-3857.py312.2.nbc  characteristics.Merge._zrank-3857.py312.nbi  characteristics.Merge.c_age.locals.fcn-3820.py312.1.nbc  characteristics.Merge.c_age.locals.fcn-3820.py312.nbi  characteristics.crspd_beta_dimson-2953.py312.1.nbc  characteristics.crspd_beta_dimson-2953.py312.nbi  (+75 more)
